feat: refactor code

--- a/apps/cms/src/extensions/documentation/public/login.html
+++ b/apps/cms/src/extensions/documentation/public/login.html
@@ -1,6 +1,8 @@
-<!DOCTYPE html><html><head>
+<!DOCTYPE html>
+<html>
+  <head>
     <title>Login - Documentation</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet" />
     <style>
       html {
         font-size: 62.5%;
@@ -118,19 +120,18 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-6 col-lg-offset-3 col-md-12">
-              <img alt="Strapi logo" class="logo" src="https://strapi.io/assets/images/logo_login.png">
+              <img alt="Strapi logo" class="logo" src="https://strapi.io/assets/images/logo_login.png" />
               <h2 class="sub-title">Enter the password to access the documentation.</h2>
               <form method="post" action="/documentation/login">
                 <span class="error">Wrong password...</span>
                 <label>Password</label>
-                <input type="password" name="password" placeholder="•••••••••">
-                <input type="submit" value="Login">
+                <input type="password" name="password" placeholder="•••••••••" />
+                <input type="submit" value="Login" />
               </form>
             </div>
           </div>
         </div>
       </section>
     </div>
-  
-
-</body></html>
+  </body>
+</html>
